parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    FIELD
    LBRACE
    RBRACE

Grammar

Rule 0     S' -> programs
Rule 1     programs -> program
Rule 2     programs -> programs program
Rule 3     program -> if_statement
Rule 4     if_statement -> assignment IF condition
Rule 5     assignment -> ASSIGN IDENTIFIER expression SEMICOLON
Rule 6     condition -> GT expression expression
Rule 7     condition -> LT expression expression
Rule 8     condition -> GTE expression expression
Rule 9     condition -> LTE expression expression
Rule 10    condition -> EQ expression expression
Rule 11    condition -> NEQ expression expression
Rule 12    condition -> AND condition condition
Rule 13    expression -> NUMBER
Rule 14    expression -> IDENTIFIER
Rule 15    expression -> ADD expression expression
Rule 16    expression -> SUB expression expression
Rule 17    expression -> MUL expression expression
Rule 18    expression -> DIV expression expression
Rule 19    expression -> CONCAT expression expression
Rule 20    expression -> SUBSTR expression expression
Rule 21    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

ADD                  : 15
AND                  : 12
ASSIGN               : 5
CONCAT               : 19
DIV                  : 18
DOT                  : 
EQ                   : 10
FIELD                : 
GT                   : 6
GTE                  : 8
IDENTIFIER           : 5 14
IF                   : 4
LBRACE               : 
LPAREN               : 21
LT                   : 7
LTE                  : 9
MUL                  : 17
NEQ                  : 11
NUMBER               : 13
RBRACE               : 
RPAREN               : 21
SEMICOLON            : 5
SUB                  : 16
SUBSTR               : 20
error                : 

Nonterminals, with rules where they appear

assignment           : 4
condition            : 4 12 12
expression           : 5 6 6 7 7 8 8 9 9 10 10 11 11 15 15 16 16 17 17 18 18 19 19 20 20 21
if_statement         : 3
program              : 1 2
programs             : 2 0

Parsing method: LALR

state 0

    (0) S' -> . programs
    (1) programs -> . program
    (2) programs -> . programs program
    (3) program -> . if_statement
    (4) if_statement -> . assignment IF condition
    (5) assignment -> . ASSIGN IDENTIFIER expression SEMICOLON

    ASSIGN          shift and go to state 5

    programs                       shift and go to state 1
    program                        shift and go to state 2
    if_statement                   shift and go to state 3
    assignment                     shift and go to state 4

state 1

    (0) S' -> programs .
    (2) programs -> programs . program
    (3) program -> . if_statement
    (4) if_statement -> . assignment IF condition
    (5) assignment -> . ASSIGN IDENTIFIER expression SEMICOLON

    ASSIGN          shift and go to state 5

    program                        shift and go to state 6
    if_statement                   shift and go to state 3
    assignment                     shift and go to state 4

state 2

    (1) programs -> program .

    ASSIGN          reduce using rule 1 (programs -> program .)
    $end            reduce using rule 1 (programs -> program .)


state 3

    (3) program -> if_statement .

    ASSIGN          reduce using rule 3 (program -> if_statement .)
    $end            reduce using rule 3 (program -> if_statement .)


state 4

    (4) if_statement -> assignment . IF condition

    IF              shift and go to state 7


state 5

    (5) assignment -> ASSIGN . IDENTIFIER expression SEMICOLON

    IDENTIFIER      shift and go to state 8


state 6

    (2) programs -> programs program .

    ASSIGN          reduce using rule 2 (programs -> programs program .)
    $end            reduce using rule 2 (programs -> programs program .)


state 7

    (4) if_statement -> assignment IF . condition
    (6) condition -> . GT expression expression
    (7) condition -> . LT expression expression
    (8) condition -> . GTE expression expression
    (9) condition -> . LTE expression expression
    (10) condition -> . EQ expression expression
    (11) condition -> . NEQ expression expression
    (12) condition -> . AND condition condition

    GT              shift and go to state 10
    LT              shift and go to state 11
    GTE             shift and go to state 12
    LTE             shift and go to state 13
    EQ              shift and go to state 14
    NEQ             shift and go to state 15
    AND             shift and go to state 16

    condition                      shift and go to state 9

state 8

    (5) assignment -> ASSIGN IDENTIFIER . expression SEMICOLON
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 18

state 9

    (4) if_statement -> assignment IF condition .

    ASSIGN          reduce using rule 4 (if_statement -> assignment IF condition .)
    $end            reduce using rule 4 (if_statement -> assignment IF condition .)


state 10

    (6) condition -> GT . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 27

state 11

    (7) condition -> LT . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 28

state 12

    (8) condition -> GTE . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 29

state 13

    (9) condition -> LTE . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 30

state 14

    (10) condition -> EQ . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 31

state 15

    (11) condition -> NEQ . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 32

state 16

    (12) condition -> AND . condition condition
    (6) condition -> . GT expression expression
    (7) condition -> . LT expression expression
    (8) condition -> . GTE expression expression
    (9) condition -> . LTE expression expression
    (10) condition -> . EQ expression expression
    (11) condition -> . NEQ expression expression
    (12) condition -> . AND condition condition

    GT              shift and go to state 10
    LT              shift and go to state 11
    GTE             shift and go to state 12
    LTE             shift and go to state 13
    EQ              shift and go to state 14
    NEQ             shift and go to state 15
    AND             shift and go to state 16

    condition                      shift and go to state 33

state 17

    (14) expression -> IDENTIFIER .

    SEMICOLON       reduce using rule 14 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 14 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 14 (expression -> IDENTIFIER .)
    ADD             reduce using rule 14 (expression -> IDENTIFIER .)
    SUB             reduce using rule 14 (expression -> IDENTIFIER .)
    MUL             reduce using rule 14 (expression -> IDENTIFIER .)
    DIV             reduce using rule 14 (expression -> IDENTIFIER .)
    CONCAT          reduce using rule 14 (expression -> IDENTIFIER .)
    SUBSTR          reduce using rule 14 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 14 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 14 (expression -> IDENTIFIER .)
    ASSIGN          reduce using rule 14 (expression -> IDENTIFIER .)
    $end            reduce using rule 14 (expression -> IDENTIFIER .)
    GT              reduce using rule 14 (expression -> IDENTIFIER .)
    LT              reduce using rule 14 (expression -> IDENTIFIER .)
    GTE             reduce using rule 14 (expression -> IDENTIFIER .)
    LTE             reduce using rule 14 (expression -> IDENTIFIER .)
    EQ              reduce using rule 14 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 14 (expression -> IDENTIFIER .)
    AND             reduce using rule 14 (expression -> IDENTIFIER .)


state 18

    (5) assignment -> ASSIGN IDENTIFIER expression . SEMICOLON

    SEMICOLON       shift and go to state 34


state 19

    (13) expression -> NUMBER .

    SEMICOLON       reduce using rule 13 (expression -> NUMBER .)
    NUMBER          reduce using rule 13 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 13 (expression -> NUMBER .)
    ADD             reduce using rule 13 (expression -> NUMBER .)
    SUB             reduce using rule 13 (expression -> NUMBER .)
    MUL             reduce using rule 13 (expression -> NUMBER .)
    DIV             reduce using rule 13 (expression -> NUMBER .)
    CONCAT          reduce using rule 13 (expression -> NUMBER .)
    SUBSTR          reduce using rule 13 (expression -> NUMBER .)
    LPAREN          reduce using rule 13 (expression -> NUMBER .)
    RPAREN          reduce using rule 13 (expression -> NUMBER .)
    ASSIGN          reduce using rule 13 (expression -> NUMBER .)
    $end            reduce using rule 13 (expression -> NUMBER .)
    GT              reduce using rule 13 (expression -> NUMBER .)
    LT              reduce using rule 13 (expression -> NUMBER .)
    GTE             reduce using rule 13 (expression -> NUMBER .)
    LTE             reduce using rule 13 (expression -> NUMBER .)
    EQ              reduce using rule 13 (expression -> NUMBER .)
    NEQ             reduce using rule 13 (expression -> NUMBER .)
    AND             reduce using rule 13 (expression -> NUMBER .)


state 20

    (15) expression -> ADD . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 35

state 21

    (16) expression -> SUB . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 36

state 22

    (17) expression -> MUL . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 37

state 23

    (18) expression -> DIV . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 38

state 24

    (19) expression -> CONCAT . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 39

state 25

    (20) expression -> SUBSTR . expression expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 40

state 26

    (21) expression -> LPAREN . expression RPAREN
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 41

state 27

    (6) condition -> GT expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 42

state 28

    (7) condition -> LT expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 43

state 29

    (8) condition -> GTE expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 44

state 30

    (9) condition -> LTE expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 45

state 31

    (10) condition -> EQ expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 46

state 32

    (11) condition -> NEQ expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 47

state 33

    (12) condition -> AND condition . condition
    (6) condition -> . GT expression expression
    (7) condition -> . LT expression expression
    (8) condition -> . GTE expression expression
    (9) condition -> . LTE expression expression
    (10) condition -> . EQ expression expression
    (11) condition -> . NEQ expression expression
    (12) condition -> . AND condition condition

    GT              shift and go to state 10
    LT              shift and go to state 11
    GTE             shift and go to state 12
    LTE             shift and go to state 13
    EQ              shift and go to state 14
    NEQ             shift and go to state 15
    AND             shift and go to state 16

    condition                      shift and go to state 48

state 34

    (5) assignment -> ASSIGN IDENTIFIER expression SEMICOLON .

    IF              reduce using rule 5 (assignment -> ASSIGN IDENTIFIER expression SEMICOLON .)


state 35

    (15) expression -> ADD expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 49

state 36

    (16) expression -> SUB expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 50

state 37

    (17) expression -> MUL expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 51

state 38

    (18) expression -> DIV expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 52

state 39

    (19) expression -> CONCAT expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 53

state 40

    (20) expression -> SUBSTR expression . expression
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER
    (15) expression -> . ADD expression expression
    (16) expression -> . SUB expression expression
    (17) expression -> . MUL expression expression
    (18) expression -> . DIV expression expression
    (19) expression -> . CONCAT expression expression
    (20) expression -> . SUBSTR expression expression
    (21) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 19
    IDENTIFIER      shift and go to state 17
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    CONCAT          shift and go to state 24
    SUBSTR          shift and go to state 25
    LPAREN          shift and go to state 26

    expression                     shift and go to state 54

state 41

    (21) expression -> LPAREN expression . RPAREN

    RPAREN          shift and go to state 55


state 42

    (6) condition -> GT expression expression .

    ASSIGN          reduce using rule 6 (condition -> GT expression expression .)
    $end            reduce using rule 6 (condition -> GT expression expression .)
    GT              reduce using rule 6 (condition -> GT expression expression .)
    LT              reduce using rule 6 (condition -> GT expression expression .)
    GTE             reduce using rule 6 (condition -> GT expression expression .)
    LTE             reduce using rule 6 (condition -> GT expression expression .)
    EQ              reduce using rule 6 (condition -> GT expression expression .)
    NEQ             reduce using rule 6 (condition -> GT expression expression .)
    AND             reduce using rule 6 (condition -> GT expression expression .)


state 43

    (7) condition -> LT expression expression .

    ASSIGN          reduce using rule 7 (condition -> LT expression expression .)
    $end            reduce using rule 7 (condition -> LT expression expression .)
    GT              reduce using rule 7 (condition -> LT expression expression .)
    LT              reduce using rule 7 (condition -> LT expression expression .)
    GTE             reduce using rule 7 (condition -> LT expression expression .)
    LTE             reduce using rule 7 (condition -> LT expression expression .)
    EQ              reduce using rule 7 (condition -> LT expression expression .)
    NEQ             reduce using rule 7 (condition -> LT expression expression .)
